k8's-nginx/pod.yml
kind: Pod
apiVersion: v1
metadata:
  name: nginx-pod
  namespace: nginx
  labels: 
    app: myapp
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
      - containerPort: 80
