k8's-nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-notes-app-ingress
  namespace: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /nginx
        backend:
         service:
           name: nginx-service
           port:
             number: 80
      - pathType: Prefix
        path: /app
        backend:
         service:
           name: django-notes-app-service
           port:
             number: 8000
